# PMK

./: README.md
zadanie0/: leds_main.c  makefile
zadanie1/: main.c
zadanie2/: main.c  makefile
zadanie3/: CMakeLists.txt  dma.c  dma.h  i2c.c  i2c.h  i2c_command.c  i2c_command.h  leds.c  leds.h  lis35de.c  lis35de.h  main.c  makefile  print_dma.c  print_dma.h  timer.c  timer.h  utils.c  utils.h
